# icfpc2020

./: .dockerignore  .gitignore  AI  Cargo.toml  LICENSE  Makefile  README.md  build.sh  get_room.Dockerfile  run.sh
.github/workflows/: ai.yml  galaxy.yml  operators.yml  performance.yml  submission.yml  submit.yml  test.yml
app/: main.rs  modulate.rs
data/: chokudai-input.txt  galaxy_expected.txt  init_state.txt  init_state_lobby.txt  multi_play.txt  orz.txt  performance_test-input.txt
docker/: Dockerfile  Makefile  bootstrap.Dockerfile  data.Dockerfile  phpmyadmin.Dockerfile  sql.Dockerfile
docker/data/: domain-cert.pem.encrypted  domain-fullchain.pem.encrypted  domain-privkey.pem.encrypted  id_ed25519.encrypted  id_ed25519.pub  init-wrapper  service_account.json.encrypted  service_account.p12.encrypted  service_account.pem.encrypted
docker/nginx/: Dockerfile  Makefile  default.conf  docker-compose.yml  htpasswd  nginx.service
docker/phpmyadmin/: Makefile  docker-compose.yml  phpmyadmin.service
go/: go.mod  go.sum  proxy.Dockerfile
go/cmd/dashboard/: app-base.yaml  app.yaml  main.go
go/cmd/launcher/: main.go
go/cmd/proxy/: README.md  main.go
script/: arena.sh  build-submission.sh  create-submission.sh  gui.sh  install-launcher.sh  push-docker-image.sh  visualize-text.sh
src/: chokudAI.rs  chokudAIOld.rs  client.rs  draw.rs  lib.rs  modulation.rs  parser.rs  recognize.rs  routing.rs  sender.rs  visualize.rs  wata.rs
submission/: Dockerfile  LICENSE  README.md  build.sh  run.sh
test/: ai_name_test.sh  message_test.sh  performance_test.sh
(+7 files in other folders)
