[package]
name = "app"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
hyper-tls = "*"
http-body = "0.3.1"
num = "*"
futures = "*"
rand = "*"
image = "*"
colorous = "*"
follow-redirects = "*"
reqwest = { version = "*", features = ["blocking"] }
structopt = "*"
itertools = "*"
colored = "*"
crossbeam = "*"
chrono = "*"
lazy_static = "*"

[profile.release]
debug = true
